# jpgcli

./: .env.example  README.md  pyproject.toml
input/: examples.csv
src/jpgcli/: config.py
src/jpgcli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/jpgcli/cli/: app.py
src/jpgcli/io/: __init__.py  loaders.py  summary.py
src/jpgcli/llm/: client.py  prompting.py
src/jpgcli/render/: charts.py  fonts.py  themes.py
src/jpgcli/schemas/: chart_spec.py  data_summary.py
src/jpgcli/utils/: errors.py
tests/: test_cli.py  test_fonts.py  test_render.py  test_schemas.py  test_summary.py
